--- a/front/src/Css/AllCoursesCSS.css
+++ b/front/src/Css/AllCoursesCSS.css
@@ -14,9 +14,9 @@
 
 .card {
     width: 190px;
-    height: 280px;
+    height: 380px;
     padding: .8em;
-    background: #f5f5f5;
+    background: #f9f9f9;
     position: relative;
     overflow: visible;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -26,11 +26,11 @@
    }
    
    .card-img {
-    background-color: #ffcaa6;
     height: 40%;
     width: 100%;
     border-radius: .5rem;
     transition: .3s ease;
+    margin-bottom: 40%;
    }
    
    .card-info {
